--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.6.7",
     "commandkit": "^0.1.10",
     "discord-api-types": "^0.37.71",
+    "discord-pagination-advanced": "^1.1.9",
     "discord-player": "^6.6.7",
     "discord.js": "^14.14.1",
     "ffmpeg-static": "^5.2.0",
